// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, state: success, isDisabled: false, isLoading: false, isWithinForm: false, length: 4 and theme: light 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
input {
  grid-area: 3 / 1 / auto / span 2;
  display: block;
  width: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2);
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2);
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #197E10;
  border-radius: 4px;
  background: transparent;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  text-align: center;
}
input:focus {
  border-color: #010205;
}
input:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover {
    border-color: #0E4809;
  }
}

.input-container {
  display: flex;
  position: relative;
  gap: 8px;
  flex-wrap: wrap;
  width: fit-content;
}
.label {
  display: none;
  grid-template-columns: minmax(0, 1fr) auto;
  position: relative;
}
.label__text {
  grid-column: span 2;
  display: block;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #197E10;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
@media(min-width:480px) {
  .label {
    display: block;
  }
  .label__text {
    position: static;
    width: fit-content;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-bottom: 4px;
  }
}

@media(min-width:760px) {
  .label {
    display: none;
  }
  .label__text {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1000px) {
  .label {
    display: block;
  }
  .label__text {
    position: static;
    width: fit-content;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-bottom: 4px;
  }
}

@media(min-width:1300px) {
  .label {
    display: none;
  }
  .label__text {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1760px) {
  .label {
    display: block;
  }
  .label__text {
    position: static;
    width: fit-content;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-bottom: 4px;
  }
}
"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: none, isDisabled: false, isLoading: false, isWithinForm: false, length: 1 and theme: light 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
input {
  grid-area: 3 / 1 / auto / span 2;
  display: block;
  width: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2);
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2);
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #6B6D70;
  border-radius: 4px;
  background: transparent;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-indent: 0;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease;
  text-align: center;
}
input:focus {
  border-color: #010205;
}
input:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover {
    border-color: #010205;
  }
}

.input-container {
  display: flex;
  position: relative;
  gap: 8px;
  flex-wrap: wrap;
  width: fit-content;
}
.label {
  display: block;
  grid-template-columns: minmax(0, 1fr) auto;
  position: relative;
}
.label__text {
  grid-column: span 2;
  display: block;
  position: static;
  width: fit-content;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-bottom: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: none, isDisabled: false, isLoading: false, isWithinForm: false, length: 2 and theme: light 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
input {
  grid-area: 3 / 1 / auto / span 2;
  display: block;
  width: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2);
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2);
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #6B6D70;
  border-radius: 4px;
  background: transparent;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-indent: 0;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease;
  text-align: center;
}
input:focus {
  border-color: #010205;
}
input:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover {
    border-color: #010205;
  }
}

.input-container {
  display: flex;
  position: relative;
  gap: 8px;
  flex-wrap: wrap;
  width: fit-content;
}
.label {
  display: block;
  grid-template-columns: minmax(0, 1fr) auto;
  position: relative;
}
.label__text {
  grid-column: span 2;
  display: block;
  position: static;
  width: fit-content;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-bottom: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: none, isDisabled: false, isLoading: false, isWithinForm: false, length: 3 and theme: light 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
input {
  grid-area: 3 / 1 / auto / span 2;
  display: block;
  width: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2);
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2);
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #6B6D70;
  border-radius: 4px;
  background: transparent;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-indent: 0;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease;
  text-align: center;
}
input:focus {
  border-color: #010205;
}
input:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover {
    border-color: #010205;
  }
}

.input-container {
  display: flex;
  position: relative;
  gap: 8px;
  flex-wrap: wrap;
  width: fit-content;
}
.label {
  display: block;
  grid-template-columns: minmax(0, 1fr) auto;
  position: relative;
}
.label__text {
  grid-column: span 2;
  display: block;
  position: static;
  width: fit-content;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-bottom: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: none, isDisabled: false, isLoading: false, isWithinForm: false, length: 4 and theme: light 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
input {
  grid-area: 3 / 1 / auto / span 2;
  display: block;
  width: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2);
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2);
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #6B6D70;
  border-radius: 4px;
  background: transparent;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  text-align: center;
}
input:focus {
  border-color: #010205;
}
input:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover {
    border-color: #010205;
  }
}

.input-container {
  display: flex;
  position: relative;
  gap: 8px;
  flex-wrap: wrap;
  width: fit-content;
}
.label {
  display: block;
  grid-template-columns: minmax(0, 1fr) auto;
  position: relative;
}
.label__text {
  grid-column: span 2;
  display: block;
  position: static;
  width: fit-content;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-bottom: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: none, isDisabled: false, isLoading: false, isWithinForm: false, length: 5 and theme: light 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
input {
  grid-area: 3 / 1 / auto / span 2;
  display: block;
  width: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2);
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2);
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #6B6D70;
  border-radius: 4px;
  background: transparent;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-indent: 0;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease;
  text-align: center;
}
input:focus {
  border-color: #010205;
}
input:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
@media(max-width:479px) {
  input {
    width: calc((276px - (8px * 4)) / 5);
  }
}

@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover {
    border-color: #010205;
  }
}

.input-container {
  display: flex;
  position: relative;
  gap: 8px;
  flex-wrap: wrap;
  width: fit-content;
}
.label {
  display: block;
  grid-template-columns: minmax(0, 1fr) auto;
  position: relative;
}
.label__text {
  grid-column: span 2;
  display: block;
  position: static;
  width: fit-content;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-bottom: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: none, isDisabled: false, isLoading: true, isWithinForm: true, length: 6 and theme: light 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
input {
  grid-area: 3 / 1 / auto / span 2;
  display: block;
  width: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2);
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2);
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #6B6D70;
  border-radius: 4px;
  background: transparent;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  text-align: center;
  opacity: 0.2;
  cursor: not-allowed;
}
input:focus {
  border-color: #010205;
}
input:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
::slotted(input) {
  position: absolute !important;
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) !important;
  width: 0 !important;
  opacity: 0 !important;
}
@media(max-width:479px) {
  input {
    width: calc((276px - (8px * 5)) / 6);
  }
}

@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover {
    border-color: #010205;
  }
}

.spinner {
  width: 100%;
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2);
  pointer-events: none;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}
.input-container {
  display: flex;
  position: relative;
  gap: 8px;
  flex-wrap: wrap;
  width: fit-content;
}
.label {
  display: block;
  grid-template-columns: minmax(0, 1fr) auto;
  position: relative;
}
.label__text {
  grid-column: span 2;
  display: block;
  position: static;
  width: fit-content;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-bottom: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: none, isDisabled: true, isLoading: false, isWithinForm: false, length: 1 and theme: light 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
input {
  grid-area: 3 / 1 / auto / span 2;
  display: block;
  width: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2);
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2);
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #6B6D70;
  border-radius: 4px;
  background: transparent;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-indent: 0;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease;
  text-align: center;
}
input:focus {
  border-color: #010205;
}
input:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover {
    border-color: #010205;
  }
}

.input-container {
  display: flex;
  position: relative;
  gap: 8px;
  flex-wrap: wrap;
  width: fit-content;
}
.label {
  display: block;
  grid-template-columns: minmax(0, 1fr) auto;
  position: relative;
}
.label__text {
  grid-column: span 2;
  display: block;
  position: static;
  width: fit-content;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-bottom: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: none, isDisabled: true, isLoading: false, isWithinForm: false, length: 2 and theme: light 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
input {
  grid-area: 3 / 1 / auto / span 2;
  display: block;
  width: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2);
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2);
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #6B6D70;
  border-radius: 4px;
  background: transparent;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-indent: 0;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease;
  text-align: center;
}
input:focus {
  border-color: #010205;
}
input:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover {
    border-color: #010205;
  }
}

.input-container {
  display: flex;
  position: relative;
  gap: 8px;
  flex-wrap: wrap;
  width: fit-content;
}
.label {
  display: block;
  grid-template-columns: minmax(0, 1fr) auto;
  position: relative;
}
.label__text {
  grid-column: span 2;
  display: block;
  position: static;
  width: fit-content;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-bottom: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: none, isDisabled: true, isLoading: false, isWithinForm: false, length: 3 and theme: light 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
input {
  grid-area: 3 / 1 / auto / span 2;
  display: block;
  width: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2);
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2);
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #6B6D70;
  border-radius: 4px;
  background: transparent;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-indent: 0;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease;
  text-align: center;
}
input:focus {
  border-color: #010205;
}
input:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover {
    border-color: #010205;
  }
}

.input-container {
  display: flex;
  position: relative;
  gap: 8px;
  flex-wrap: wrap;
  width: fit-content;
}
.label {
  display: block;
  grid-template-columns: minmax(0, 1fr) auto;
  position: relative;
}
.label__text {
  grid-column: span 2;
  display: block;
  position: static;
  width: fit-content;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-bottom: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: none, isDisabled: true, isLoading: false, isWithinForm: false, length: 4 and theme: light 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
input {
  grid-area: 3 / 1 / auto / span 2;
  display: block;
  width: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2);
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2);
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #6B6D70;
  border-radius: 4px;
  background: transparent;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  text-align: center;
}
input:focus {
  border-color: #010205;
}
input:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover {
    border-color: #010205;
  }
}

.input-container {
  display: flex;
  position: relative;
  gap: 8px;
  flex-wrap: wrap;
  width: fit-content;
}
.label {
  display: block;
  grid-template-columns: minmax(0, 1fr) auto;
  position: relative;
}
.label__text {
  grid-column: span 2;
  display: block;
  position: static;
  width: fit-content;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-bottom: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: none, isDisabled: true, isLoading: false, isWithinForm: false, length: 5 and theme: light 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
input {
  grid-area: 3 / 1 / auto / span 2;
  display: block;
  width: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2);
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2);
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #6B6D70;
  border-radius: 4px;
  background: transparent;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-indent: 0;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease;
  text-align: center;
}
input:focus {
  border-color: #010205;
}
input:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
@media(max-width:479px) {
  input {
    width: calc((276px - (8px * 4)) / 5);
  }
}

@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover {
    border-color: #010205;
  }
}

.input-container {
  display: flex;
  position: relative;
  gap: 8px;
  flex-wrap: wrap;
  width: fit-content;
}
.label {
  display: block;
  grid-template-columns: minmax(0, 1fr) auto;
  position: relative;
}
.label__text {
  grid-column: span 2;
  display: block;
  position: static;
  width: fit-content;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-bottom: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: error, isDisabled: false, isLoading: false, isWithinForm: true, length: 6 and theme: dark 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
input {
  grid-area: 3 / 1 / auto / span 2;
  display: block;
  width: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2);
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2);
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #FC4040;
  border-radius: 4px;
  background: transparent;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-indent: 0;
  color: #FBFCFF;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  text-align: center;
}
input:focus {
  border-color: #FBFCFF;
}
input:disabled {
  cursor: not-allowed;
  color: #7E7F82;
  border-color: #7E7F82;
  -webkit-text-fill-color: #7E7F82;
}
::slotted(input) {
  position: absolute !important;
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) !important;
  width: 0 !important;
  opacity: 0 !important;
}
@media(max-width:479px) {
  input {
    width: calc((276px - (8px * 5)) / 6);
  }
}

@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover {
    border-color: #FB0404;
  }
}

.input-container {
  display: flex;
  position: relative;
  gap: 8px;
  flex-wrap: wrap;
  width: fit-content;
}
.label {
  display: none;
  grid-template-columns: minmax(0, 1fr) auto;
  position: relative;
}
.label__text {
  grid-column: span 2;
  display: block;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #AFB0B3;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FC4040;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;
